fix word wrap chat component

--- a/source/src/css/style.css
+++ b/source/src/css/style.css
@@ -121,6 +121,8 @@ body {
 }
 .chat .chat-history .message {
   color: white;
+  word-wrap: break-word;
+  text-align: justify;
   padding: 18px 20px;
   line-height: 26px;
   font-size: 16px;
